# tokend

./: .env  .env.template  .gitignore  Cargo.toml  README.adoc
conf/: local.yaml.template
devenv/: README.adoc  docker-compose.yml  initdb.sh
devenv/initdb/: 000-utilities.sql  001-create_db.sql  002-db-post-init.sql  003-create-dev-schema.sql
docs/inspi/: INSPI.adoc
migrations/: 0000__ddl_init_db.sql  0001__ddl_tenants.sql  0002__ddl_auditlog.sql
src/: error.rs  lib.rs  main.rs
src/core/: mod.rs  token.rs  util.rs
src/core/context/: context.rs  mod.rs  permissions.rs
src/core/tenant/: domain.rs  mod.rs
src/core/token/: generator.rs  impl.rs  in_memory.rs  mod.rs  token.rs
src/core/util/: misc.rs  mod.rs  paging.rs
src/infra/: config.rs  db.rs  mod.rs  telemetry.rs
src/infra/db/: db.rs  mod.rs  tenants.rs  util.rs
tests/: main.rs
tests/helpers/: startup.rs
tests/integration_tests/: config_tests.rs  mod.rs  tenant_tests.rs
