[package]
name = "tokend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
chrono = "0.4.24"
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
derivative = "2.1"
thiserror = "1.0.40"
async-trait = "0.1.68"
serde_json = "1.0.95"
jsonwebtoken = "8.3.0"
regex = "1.8.1"
secrecy = "0.8.0"
base64 = "0.21.0"
mockall = "0.11.4"

[dependencies.uuid]
version = "1.3.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
