[package]
name = "tokend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
chrono = "0.4.24"
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
derivative = "2.1"
thiserror = "1.0.40"
async-trait = "0.1.68"
serde_json = "1.0.95"
jsonwebtoken = "8.3.0"
regex = "1.8.1"
secrecy = { version = "0.8", features = ["serde"] }
base64 = "0.21.0"
config = { version = "0.13", default-features = false, features = ["yaml"] }
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.1"
tracing-log = "0.1.1"

[dependencies.uuid]
version = "1.3.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
once_cell = "1.7.2"
mockall = "0.11.4"